objects/Purina_Species__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Specie information including Nutritionist and Vet details</description>
    <fields>
        <fullName>Beef_Nutritionist_Email__c</fullName>
        <description>Email of Beef Nutritionist.</description>
        <label>Beef Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Beef_Nutritionist_Phone__c</fullName>
        <description>Phone of Beef Nutritionist</description>
        <label>Beef Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Beef_Nutritionist__c</fullName>
        <description>Name of Beef Nutritionist</description>
        <label>Beef Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beef_Veterinarian_Email__c</fullName>
        <description>Email of Beef Veterinarian</description>
        <label>Beef Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Beef_Veterinarian_Phone__c</fullName>
        <description>Phone of Beef Veterinarian</description>
        <label>Beef Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Beef_Veternarian__c</fullName>
        <description>Name of Beef Veternarian</description>
        <label>Beef Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dairy_Nutritionist_Email__c</fullName>
        <description>Email of Dairy Nutritionist</description>
        <label>Dairy Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dairy_Nutritionist_Phone__c</fullName>
        <description>Phone number of Dairy Nutritionist</description>
        <label>Dairy Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dairy_Nutritionist__c</fullName>
        <description>Name of Dairy Nutritionist</description>
        <label>Dairy Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dairy_Veterinarian_Email__c</fullName>
        <description>Email for the Dairy Veterinarian</description>
        <label>Dairy Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dairy_Veterinarian_Phone__c</fullName>
        <description>Phone for the Dairy Veterinarian</description>
        <label>Dairy Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Dairy_Veternarian__c</fullName>
        <description>Veterinarian for Dairy</description>
        <label>Dairy Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deer_Elk_Nutritionist_Email__c</fullName>
        <description>Email of Deer/Elk Nutritionist</description>
        <label>Deer/Elk Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deer_Elk_Nutritionist_Phone__c</fullName>
        <description>Phone number of Deer/Elk Nutritionist</description>
        <label>Deer/Elk Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Deer_Elk_Nutritionist__c</fullName>
        <description>Name of Deer/Elk Nutritionist</description>
        <label>Deer/Elk Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deer_Elk_Veterinarian_Email__c</fullName>
        <description>Email for the Deer/Elk Veterinarian</description>
        <label>Deer/Elk Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Deer_Elk_Veternarian__c</fullName>
        <description>Veterinarian for Deer/Elk</description>
        <label>Deer/Elk Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deer_Veterinarian_Phone__c</fullName>
        <description>Phone for the Deer/Elk Veterinarian</description>
        <label>Deer/Elk Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Duck_Nutritionist_Email__c</fullName>
        <description>Email of Duck Nutritionist</description>
        <label>Duck Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Duck_Nutritionist_Phone__c</fullName>
        <description>Phone of Duck Nutritionist</description>
        <label>Duck Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Duck_Nutritionist__c</fullName>
        <description>Name of Duck Nutritionist</description>
        <label>Duck Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duck_Veterinarian_Email__c</fullName>
        <description>Email of Duck Veterinarian</description>
        <label>Duck Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Duck_Veterinarian_Phone__c</fullName>
        <description>Phone of Duck Veterinarian</description>
        <label>Duck Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Duck_Veternarian__c</fullName>
        <description>Name of Duck Veternarian</description>
        <label>Duck Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eagle_Creek_Nutritionist_Email__c</fullName>
        <label>Eagle Creek Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Eagle_Creek_Nutritionist_Phone__c</fullName>
        <label>Eagle Creek Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Eagle_Creek_Veterinarian_Phone__c</fullName>
        <label>Eagle Creek Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Eagle_Creek_Veternarian_Email__c</fullName>
        <label>Eagle Creek Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Eagle_Creek_Veternarian__c</fullName>
        <label>Eagle Creek Veternarian</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eagle_Creek__c</fullName>
        <label>Eagle Creek Nutritionist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fish_Nutritionist_Email__c</fullName>
        <description>Email of Fish Nutritionist</description>
        <label>Fish Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fish_Nutritionist_Phone__c</fullName>
        <description>Phone of Fish Nutritionist</description>
        <label>Fish Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fish_Nutritionist__c</fullName>
        <description>Name of Fish Nutritionist</description>
        <label>Fish Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fish_Veterinarian_Email__c</fullName>
        <description>Email of Fish Veterinarian</description>
        <label>Fish Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fish_Veterinarian_Phone__c</fullName>
        <description>Phone of Fish Veterinarian</description>
        <label>Fish Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fish_Veternarian__c</fullName>
        <description>Name of Fish Veternarian</description>
        <label>Fish Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Game_Bird_Nutritionist_Email__c</fullName>
        <description>Email of Game Bird Nutritionist</description>
        <label>Game Bird Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Game_Bird_Nutritionist_Phone__c</fullName>
        <description>Phone of Game Bird Nutritionist</description>
        <label>Game Bird Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Game_Bird_Nutritionist__c</fullName>
        <description>Name of Game Bird Nutritionist</description>
        <label>Game Bird Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Game_Bird_Veterinarian_Email__c</fullName>
        <description>Email of Game Bird Veterinarian</description>
        <label>Game Bird Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Game_Bird_Veterinarian_Phone__c</fullName>
        <description>Phone of Game Bird Veterinarian</description>
        <label>Game Bird Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Game_Bird_Veternarian__c</fullName>
        <description>Name of Game Bird Veternarian</description>
        <label>Game Bird Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goat_Nutritionist_Email__c</fullName>
        <description>Email of Goat Nutritionist</description>
        <label>Goat Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Goat_Nutritionist_Phone__c</fullName>
        <description>Phone of Goat Nutritionist</description>
        <label>Goat Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Goat_Nutritionist__c</fullName>
        <description>Name of Goat Nutritionist</description>
        <label>Goat Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goat_Veterinarian_Email__c</fullName>
        <description>Email of Goat Veterinarian</description>
        <label>Goat Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Goat_Veterinarian_Phone__c</fullName>
        <description>Phone of Goat Veterinarian</description>
        <label>Goat Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Goat_Veternarian__c</fullName>
        <description>Name of Goat Veternarian</description>
        <label>Goat Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Horse_Nutritionist_Email__c</fullName>
        <description>Email of Horse Nutritionist</description>
        <label>Horse Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Horse_Nutritionist_Phone__c</fullName>
        <description>Phone number of Horse Nutritionist</description>
        <label>Horse Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Horse_Nutritionist__c</fullName>
        <description>Name of Horse Nutritionist</description>
        <label>Horse Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Horse_Veterinarian_Email__c</fullName>
        <description>Email for the Horse Veterinarian</description>
        <label>Horse Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Horse_Veterinarian_Phone__c</fullName>
        <description>Phone for the Horse Veterinarian</description>
        <label>Horse Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Horse_Veternarian__c</fullName>
        <description>Veterinarian for Horse</description>
        <label>Horse Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Animal_Nutritionist_Email__c</fullName>
        <description>Email of Lab Animal Nutritionist</description>
        <label>Lab Animal Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lab_Animal_Nutritionist_Phone__c</fullName>
        <description>Phone for Lab Animal Nutritionist</description>
        <label>Lab Animal Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lab_Animal_Nutritionist__c</fullName>
        <description>Name of Lab Animal Nutritionist</description>
        <label>Lab Animal Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Animal_Veterinarian_Email__c</fullName>
        <description>Email of Lab Animal Veterinarian</description>
        <label>Lab Animal Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lab_Animal_Veterinarian_Phone__c</fullName>
        <description>Phone of Lab Animal Veterinarian</description>
        <label>Lab Animal Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lab_Animal_Veternarian__c</fullName>
        <description>Name of Lab Animal Veternarian</description>
        <label>Lab Animal Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Llama_Alpaca_Nutritionist_Email__c</fullName>
        <description>Email of Llama/Alpaca Nutritionist</description>
        <label>Llama/Alpaca Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Llama_Alpaca_Nutritionist_Phone__c</fullName>
        <description>Phone of Llama/Alpaca Nutritionist</description>
        <label>Llama/Alpaca Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Llama_Alpaca_Nutritionist__c</fullName>
        <description>Name of Llama/Alpaca Nutritionist</description>
        <label>Llama/Alpaca Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Llama_Alpaca_Veterinarian_Email__c</fullName>
        <description>Email of Llama/Alpaca Veterinarian</description>
        <label>Llama/Alpaca Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Llama_Alpaca_Veterinarian_Phone__c</fullName>
        <description>Phone of Llama/Alpaca Veterinarian</description>
        <label>Llama/Alpaca Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Llama_Alpaca_Veternarian__c</fullName>
        <description>Name of Llama/Alpaca Veternarian</description>
        <label>Llama/Alpaca Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mazuri_Diets_Nutritionist_Email__c</fullName>
        <description>Email of Mazuri Diets Nutritionist</description>
        <label>Mazuri Diets Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mazuri_Diets_Nutritionist_Phone__c</fullName>
        <description>Phone of Mazuri Diets Nutritionist</description>
        <label>Mazuri Diets Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mazuri_Diets_Nutritionist__c</fullName>
        <description>Name of Mazuri Diets Nutritionist</description>
        <label>Mazuri Diets Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mazuri_Diets_Veterinarian_Email__c</fullName>
        <description>Email of Mazuri Diets Veterinarian</description>
        <label>Mazuri Diets Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mazuri_Diets_Veterinarian_Phone__c</fullName>
        <description>Phone of Mazuri Diets Veterinarian</description>
        <label>Mazuri Diets Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mazuri_Diets_Veternarian__c</fullName>
        <description>Name of Mazuri Diets Veternarian</description>
        <label>Mazuri Diets Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Companion_Nutritionist_Email__c</fullName>
        <description>Email of Other Companion Nutritionist</description>
        <label>Other Companion Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Companion_Nutritionist_Phone__c</fullName>
        <description>Phone of Other Companion Nutritionist</description>
        <label>Other Companion Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Companion_Nutritionist__c</fullName>
        <description>Name of Other Companion Nutritionist</description>
        <label>Other Companion Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Companion_Veterinarian_Email__c</fullName>
        <description>Email of Other Companion Veterinarian</description>
        <label>Other Companion Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Companion_Veterinarian_Phone__c</fullName>
        <description>Phone of Other Companion Veterinarian</description>
        <label>Other Companion Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Companion_Veternarian__c</fullName>
        <description>Name of Other Companion Veternarian</description>
        <label>Other Companion Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Nutritionist_Email__c</fullName>
        <description>Email of Pet Nutritionist</description>
        <label>Pet Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pet_Nutritionist_Phone__c</fullName>
        <description>Phone number of Pet Nutritionist</description>
        <label>Pet Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pet_Nutritionist__c</fullName>
        <description>Name of Pet Nutritionist</description>
        <label>Pet Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Veterinarian_Email__c</fullName>
        <description>Email for the Pet Veterinarian</description>
        <label>Pet Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pet_Veterinarian_Phone__c</fullName>
        <description>Phone for the Pet Veterinarian</description>
        <label>Pet Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pet_Veternarian__c</fullName>
        <description>Veterinarian for Pet</description>
        <label>Pet Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poultry_Commercial_Nutritionist_Email__c</fullName>
        <description>Email of Poultry - Commerical Nutritionist</description>
        <label>Poultry - Commerical Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Poultry_Commercial_Nutritionist__c</fullName>
        <description>Name of Poultry - Commerical Nutritionist</description>
        <label>Poultry - Commercial Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poultry_Commercial_Veternarian__c</fullName>
        <description>Veterinarian for Poultry - Commerical</description>
        <label>Poultry - Commerical Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poultry_Commerical_Nutritionist_Phone__c</fullName>
        <description>Phone number of Poultry - Commerical Nutritionist</description>
        <label>Poultry - Commerical Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Poultry_Commerical_Veterinarian_Email__c</fullName>
        <description>Email for the Poultry - Commerical Veterinarian</description>
        <label>Poultry - Commerical Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Poultry_Commerical_Veterinarian_Phone__c</fullName>
        <description>Phone for the Poultry - Commerical Veterinarian</description>
        <label>Poultry - Commerical Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Poultry_Farm_Flock_Nutritionist_Email__c</fullName>
        <description>Email of Poultry- Farm Flock Nutritionist</description>
        <label>Poultry - Farm Flock Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Poultry_Farm_Flock_Nutritionist_Phone__c</fullName>
        <description>Phone of Poultry - Farm Flock Nutritionist</description>
        <label>Poultry - Farm Flock Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Poultry_Farm_Flock_Nutritionist__c</fullName>
        <description>Name of Poultry - Farm Flock Nutritionist</description>
        <label>Poultry - Farm Flock Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poultry_Farm_Flock_Veterinarian_Email__c</fullName>
        <description>Email of Poultry - Farm Flock Veterinarian</description>
        <label>Poultry - Farm Flock Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Poultry_Farm_Flock_Veterinarian_Phone__c</fullName>
        <description>Phone of Poultry - Farm Flock Veterinarian</description>
        <label>Poultry - Farm Flock Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Poultry_Farm_Flock_Veternarian__c</fullName>
        <description>Name of Poultry - Farm Flock Veternarian</description>
        <label>Poultry - Farm Flock Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primate_Lab_Nutritionist_Email__c</fullName>
        <description>Email of Primate Lab Nutritionist</description>
        <label>Primate Lab Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primate_Lab_Nutritionist_Phone__c</fullName>
        <description>Phone of Primate Lab Nutritionist</description>
        <label>Primate Lab Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primate_Lab_Nutritionist__c</fullName>
        <description>Name of Primate Lab Nutritionist</description>
        <label>Primate Lab Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primate_Lab_Veterinarian_Email__c</fullName>
        <description>Email of Primate Lab Veterinarian</description>
        <label>Primate Lab Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primate_Lab_Veterinarian_Phone__c</fullName>
        <description>Phone of Primate Lab Veterinarian</description>
        <label>Primate Lab Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primate_Lab_Veternarian__c</fullName>
        <description>Name of Primate Lab Veternarian</description>
        <label>Primate Lab Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rabbit_Nutritionist_Email__c</fullName>
        <description>Email of Rabbit Nutritionist</description>
        <label>Rabbit Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rabbit_Nutritionist_Phone__c</fullName>
        <description>Phone of Rabbit Nutritionist</description>
        <label>Rabbit Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rabbit_Nutritionist__c</fullName>
        <description>Name of Rabbit Nutritionist</description>
        <label>Rabbit Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rabbit_Veterinarian_Email__c</fullName>
        <description>Email of Rabbit Veterinarian</description>
        <label>Rabbit Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rabbit_Veterinarian_Phone__c</fullName>
        <description>Phone of Rabbit Veterinarian</description>
        <label>Rabbit Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rabbit_Veternarian__c</fullName>
        <description>Name of Rabbit Veternarian</description>
        <label>Rabbit Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratite_Nutritionist_Email__c</fullName>
        <description>Email of Ratite Nutritionist</description>
        <label>Ratite Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ratite_Nutritionist_Phone__c</fullName>
        <description>Phone of Ratite Nutritionist</description>
        <label>Ratite Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ratite_Nutritionist__c</fullName>
        <description>Name of Ratite Nutritionist</description>
        <label>Ratite Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratite_Veterinarian_Email__c</fullName>
        <description>Email of Ratite Veterinarian</description>
        <label>Ratite Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ratite_Veterinarian_Phone__c</fullName>
        <description>Phone of Ratite Veterinarian</description>
        <label>Ratite Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ratite_Veternarian__c</fullName>
        <description>Name of Ratite Veternarian</description>
        <label>Ratite Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheep_Lamb_Nutritionist_Email__c</fullName>
        <description>Email of Sheep/Lamb Nutritionist</description>
        <label>Sheep/Lamb Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sheep_Lamb_Nutritionist_Phone__c</fullName>
        <description>Phone of Sheep/Lamb Nutritionist</description>
        <label>Sheep/Lamb Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sheep_Lamb_Nutritionist__c</fullName>
        <description>Name of Sheep/Lamb Nutritionist</description>
        <label>Sheep/Lamb Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheep_Lamb_Veterinarian_Email__c</fullName>
        <description>Email of Sheep/Lamb Veterinarian</description>
        <label>Sheep/Lamb Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sheep_Lamb_Veterinarian_Phone__c</fullName>
        <description>Phone of Sheep/Lamb Veterinarian</description>
        <label>Sheep/Lamb Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sheep_Lamb_Veternarian__c</fullName>
        <description>Name of Sheep/Lamb Veternarian</description>
        <label>Sheep/Lamb Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Nutritionist_Email__c</fullName>
        <description>Email of Show Nutritionist</description>
        <label>Show Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Show_Nutritionist_Phone__c</fullName>
        <description>Phone number of Show Nutritionist</description>
        <label>Show Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Show_Nutritionist__c</fullName>
        <description>Name of Show Nutritionist</description>
        <label>Show Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Veterinarian_Email__c</fullName>
        <description>Email for the Show Veterinarian</description>
        <label>Show Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Show_Veterinarian_Phone__c</fullName>
        <description>Phone for the Show Veterinarian</description>
        <label>Show Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Show_Veternarian__c</fullName>
        <description>Veterinarian for Show</description>
        <label>Show Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swine_Nutritionist_Email__c</fullName>
        <description>Email of Swine Nutritionist</description>
        <label>Swine Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Swine_Nutritionist_Phone__c</fullName>
        <description>Phone number of Swine Nutritionist</description>
        <label>Swine Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Swine_Nutritionist__c</fullName>
        <description>Name of Swine Nutritionist</description>
        <label>Swine Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swine_Veterinarian_Email__c</fullName>
        <description>Email for the Swine Veterinarian</description>
        <label>Swine Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Swine_Veterinarian_Phone__c</fullName>
        <description>Phone for the Swine Veterinarian</description>
        <label>Swine Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Swine_Veternarian__c</fullName>
        <description>Veterinarian for Swine</description>
        <label>Swine Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tractor_Nutritionist_Email__c</fullName>
        <label>Tractor Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tractor_Nutritionist_Phone__c</fullName>
        <label>Tractor Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tractor_Nutritionist__c</fullName>
        <label>Tractor Nutritionist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tractor_Veterinarian_Email__c</fullName>
        <label>Tractor Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tractor_Veterinarian_Phone__c</fullName>
        <label>Tractor Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tractor_Veternarian__c</fullName>
        <label>Tractor Veternarian</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wild_Bird_Nutritionist_Email__c</fullName>
        <description>Email of Wild Bird Nutritionist</description>
        <label>Wild Bird Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Wild_Bird_Nutritionist_Phone__c</fullName>
        <description>Phone of Wild Bird Nutritionist</description>
        <label>Wild Bird Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Wild_Bird_Nutritionist__c</fullName>
        <description>Name of Wild Bird Nutritionist</description>
        <label>Wild Bird Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wild_Bird_Veterinarian_Email__c</fullName>
        <description>Email of Wild Bird Veterinarian</description>
        <label>Wild Bird Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Wild_Bird_Veterinarian_Phone__c</fullName>
        <description>Phone of Wild Bird Veterinarian</description>
        <label>Wild Bird Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Wild_Bird_Veternarian__c</fullName>
        <description>Name of Wild Bird Veternarian</description>
        <label>Wild Bird Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoo_Nutritionist_Email__c</fullName>
        <description>Email of Zoo Nutritionist</description>
        <label>Zoo Nutritionist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zoo_Nutritionist_Phone__c</fullName>
        <description>Phone of Zoo Nutritionist</description>
        <label>Zoo Nutritionist Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zoo_Nutritionist__c</fullName>
        <description>Name of Zoo Nutritionist</description>
        <label>Zoo Nutritionist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zoo_Veterinarian_Email__c</fullName>
        <description>Email of Zoo Veterinarian</description>
        <label>Zoo Veterinarian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zoo_Veterinarian_Phone__c</fullName>
        <description>Phone of Zoo Veterinarian</description>
        <label>Zoo Veterinarian Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zoo_Veternarian__c</fullName>
        <description>Name of Zoo Veternarian</description>
        <label>Zoo Veternarian</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Purina Species</label>
</CustomObject>